<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="es.tudir.horario.AsirFragment">

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/txtSelec"
    android:padding="20dp"
    android:textSize="28sp"
    android:textColor="@color/primaryColor"
    android:id="@+id/mainAsir0"
    android:background="#ededed"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAsir2"
        android:padding="1dp"
        android:textColor="#fff"
        android:background="@drawable/btn_circle_default"
        android:textSize="28sp"
        android:id="@+id/btnAsir2"
        android:onClick="onAsir2Click"
        android:layout_below="@+id/mainAsir0"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAsir1"
        android:padding="1dp"
        android:textColor="#fff"
        android:background="@drawable/btn_circle_default"
        android:textSize="28sp"
        android:id="@+id/btnAsir1"
        android:onClick="onAsir1Click"
        android:layout_above="@+id/mainAsir0"
        android:layout_alignLeft="@+id/btnAsir2"
        android:layout_alignStart="@+id/btnAsir2"
        android:layout_marginBottom="45dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
